--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@
 
 .calendar {
  
-  width: 100%;
+  width: 50%;
   /* max-width: 600px; */
   margin: 1em auto;
   padding: .5em 0; 
@@ -68,6 +68,10 @@
 
 .abc {
   background-color: white;
+  border: 1px solid;
+  text-align: left;
+  padding: 15px;
+  height: 100px;
 }
 
 .bg-primary {
